create form login

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba</title>
+    <title>Gimee Paw</title>
+
+    <!-- CSS-->
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <h2>Exito github pages</h2>
+    <header>
+        <h1>Gimme Paw</h1>
+    </header>
+    <main>
+        <div class="box">
+            <form action="#">
+                <label for="fUsuario">Usuario: </label>
+                <input type="text" id="fUsuario" name="fUsuario" placeholder="UyKietos">
+
+                <label for="fContra">Contrasena: </label>
+                <input type="text" id="fContra" name="fContra" placeholder="contrasena123">
+                
+                <input type="submit" value="Ingresar">
+            </form>
+        </div>
+    </main>
 </body>
 </html>
